<resources>
    <string name="app_name">My Chat App</string>
    <string name="app_s_logo">Apps logo</string>
    <!--  A1 Login  -->
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="signup">Sign up</string>
    <!--  A2 SignUp  -->
    <string name="enter_name">Enter name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_correct_email">Enter correct email</string>
    <string name="password_mismatch">Password missmatch</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="signup_failed">Signup Failed : %1$s</string>
    <string name="access_permission_is_required">Acces permission is required</string>
    <!--  A3 Reset Password  -->
    <string name="reset_password_instructions">Reset Password instructions has been sent on email : %1$s</string>
    <string name="failed_to_send_email">Failed to sent email : %1$s</string>
    <string name="resend_timer">Resend in : %1$s</string>

    <!--  B1 Profil  -->

    <string name="nameUpdateFailed">Failed to update profile: %1$s</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="change_avatar">Change avatar</string>
    <string name="delete_avatar">Delete Avatar</string>
    <string name="avatar_deleted_succesfully">Avatar deleted successfully</string>
    <string name="profile">Profile</string>
    <string name="change_name_successfully">Change name successfully</string>
    <string name="profile_updated">Profile updated</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="something_went_wrong">Something went wrong : %1$s</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="loading_please_wait">Loading, please wait ...</string>
    <string name="chat">Chat</string>
    <string name="requests">Requests</string>
    <string name="find">Find</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friend_list_will_appear_here">Friend list will appear here</string>
    <string name="friend_request_list_will_appear_here">Friend request list will appear here</string>
    <string name="chat_list_will_appear_here">Chat list will appear here</string>
    <string name="press_back_to_exit">Press back again to exit</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="cancel_request">Cancel request</string>
    <string name="failed_to_fetch_friend">Failed to fetch friends : %1$s</string>
    <string name="request_sent_succesfully">Request sent succesfully</string>
    <string name="failed_tosent_friend_request">Failed to send friend request : %1$s</string>
    <string name="no_internet">Check Internet Connection</string>
    <string name="login_failed">Login failed : %1$s</string>
    <string name="image_has_been_deleted">Image has been deleted</string>
    <string name="add_avatar_from_gallery">Select an avatar from the galery</string>
    <string name="add_avatar_from_camera">Take a photo</string>
</resources>
