<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".a1_login.A13_ResetPasswordActivity">

        <!-- A ajouter ensuite Avec include on ajoute la custom progressBar que l'on rend invisible par défaut-->
        <include
            layout="@layout/custom_progressbar"
            android:id="@+id/progressBar"
            android:visibility="gone"/>
        <!--    Après on va modifier le code pour l'afficher au bon moment à chaque fois que l'on en a besoin -->

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/ivAvatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_s_logo"
            android:src="@drawable/a0_ic_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAvatar">

            <LinearLayout
                android:id="@+id/llResetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/a0_shape_card_border"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:paddingEnd="32dp"
                tools:visibility="invisible">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnResetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="btnResetPasswordClick"
                    android:text="@string/reset_password" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMessageResetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/a0_shape_card_border"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="14dp"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tvMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    tools:text="@string/reset_password_instructions" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnRetry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/retry" />

                    <Button
                        android:id="@+id/btnClose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:onClick="btnCloseClick"
                        android:text="@string/close" />
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>